--- a/Admin/PassForgoten.html
+++ b/Admin/PassForgoten.html
@@ -35,12 +35,12 @@
             </div>
 
             <!-- Submit Button -->
-            <a href="Token.html"><button 
+            <button 
                 type="submit" 
                 class="w-full bg-yellow-400 text-black py-2 rounded-lg hover:bg-yellow-500 transition duration-300"
             >
                 <i class="fas fa-paper-plane"></i> إرسال رابط إعادة التعيين
-            </button></a>
+            </button>
 
             <!-- Back to Login Link -->
             <p class="mt-4 text-gray-600">
@@ -50,5 +50,7 @@
             </p>
         </div>
     </div>
+    <script>
+    </script>
 </body>
 </html>
