--- a/Admin/NewCategory.html
+++ b/Admin/NewCategory.html
@@ -9,31 +9,73 @@
     <style>
         body { font-family: 'Tajawal', sans-serif; padding-top: 64px; } /* Add padding for navbar */
     </style>
+    <script src="sidebar.js"></script>
+    <script src="LogOut.js"></script>
     <script>
-        const userId = localStorage.getItem("userId") || sessionStorage.getItem("userId");
-            const permissions = localStorage.getItem("permissions") || sessionStorage.getItem("permissions");
-            let token = localStorage.getItem("token") || sessionStorage.getItem("token");
-        document.addEventListener("DOMContentLoaded", function () {
+        // const userId = localStorage.getItem("userId") || sessionStorage.getItem("userId");
+        // const permissions = localStorage.getItem("permissions") || sessionStorage.getItem("permissions");
+        // const token = localStorage.getItem("token") || sessionStorage.getItem("token");
 
-            if (!userId || !permissions || !token) {
-                window.location.href = "index.html";
-            } else {
-                const PermissionsArray = permissions.split('&');
-                if (!PermissionsArray.includes('gererDashboard')) document.getElementById('dashboard').remove();
-                if (!PermissionsArray.includes('gererCategories')){
-                    if (window.history.length > 1) {
-                        window.history.back();
-                    }else {
-                        window.location.href = "index.html";
-                    }
+        document.addEventListener("DOMContentLoaded", function () {
+            sidebarhandeler("gererCategorys");
+            // Handle form submission
+            const form = document.getElementById('new-category-form');
+            const categoryNameInput = document.getElementById('category-name');
+            const categoryImageInput = document.getElementById('category-image');
+
+            form.addEventListener('submit', async function (event) {
+                event.preventDefault(); // Prevent the default form submission
+
+                // Get form values
+                const categoryName = categoryNameInput.value.trim();
+                const categoryImageFile = categoryImageInput.files[0];
+
+                // Validate inputs
+                if (!categoryName) {
+                    alert('الرجاء إدخال اسم الفئة'); // TODO add <p> element to display error message
+                    return;
                 }
-                if (!PermissionsArray.includes('gererProducts')) document.getElementById('products').remove();
-                if (!PermissionsArray.includes('gererClients')) document.getElementById('clients').remove();
-                if (!PermissionsArray.includes('gererOrders')) document.getElementById('orders').remove();
-                // if (!PermissionsArray.includes('gererUsers')) document.getElementById('users').remove();
-                if (!PermissionsArray.includes('gererSettings')) document.getElementById('settings').remove();
-            }
-        })
+
+                try {
+                    let imageUrl = null;
+
+                    // Upload image if provided
+                    if (categoryImageFile) {
+                        const formData = new FormData();
+                        formData.append('image', categoryImageFile); // Rename the image to the category name
+                        formData.append('label', categoryName);
+
+                        const uploadResponse = await fetch('https://sbaishop.com/api/category', {
+                            method: 'POST',
+                            headers: {
+                                'Authorization': `Bearer ${token}`,
+                            },
+                            body: formData,
+                        });
+
+                        if (!uploadResponse.ok) {
+                            throw new Error('فشل تحميل الصورة');
+                        }
+
+                        const uploadData = await uploadResponse.json();
+                        imageUrl = uploadData.imageUrl; // Assuming the server returns the image URL
+                    }
+
+                    if (!response.ok) {
+                        throw new Error('فشل إضافة الفئة');
+                    }
+
+                    const data = await response.json();
+                    console.log('تمت إضافة الفئة بنجاح:', data);
+
+                    // Redirect to the categories page or show a success message
+                    window.location.href = 'Categories.html';
+                } catch (error) {
+                    console.error('حدث خطأ:', error);
+                    alert('حدث خطأ أثناء إضافة الفئة. الرجاء المحاولة مرة أخرى.');
+                }
+            });
+        });
     </script>
 </head>
 <body class="bg-gray-100 text-black flex flex-col min-h-screen">
@@ -67,7 +109,7 @@
                     <div id="profile-dropdown" class="hidden absolute left-0 mt-2 w-48 bg-white text-black rounded-lg shadow-lg">
                         <a href="#" class="block px-4 py-2 hover:bg-gray-100">الملف الشخصي</a>
                         <a href="#" class="block px-4 py-2 hover:bg-gray-100">الإعدادات</a>
-                        <a href="#" class="block px-4 py-2 hover:bg-gray-100">تسجيل الخروج</a>
+                        <button onclick="logout()" class="block px-4 py-2 hover:bg-gray-100">تسجيل الخروج</button>
                     </div>
                 </div>
             </div>
@@ -101,14 +143,14 @@
     </div>
 
     <!-- Main Content -->
-    <div class="p-6 md:mr-64 mt-16"> <!-- Add margin-top for navbar -->
+    <div class="p-6 md:mr-64"> <!-- Add margin-top for navbar -->
         <h1 class="text-center text-2xl font-bold text-gray-800 mb-4">
             <i class="fas fa-plus text-yellow-400"></i> إضافة فئة جديدة
         </h1>
 
         <!-- New Category Form -->
         <div class="bg-white rounded-lg shadow p-6">
-            <form>
+            <form id="new-category-form">
                 <!-- Category Name -->
                 <div class="mb-6">
                     <label for="category-name" class="block text-gray-700 mb-2">اسم الفئة</label>
@@ -119,17 +161,6 @@
                         placeholder="أدخل اسم الفئة"
                         required
                     >
-                </div>
-
-                <!-- Category Description -->
-                <div class="mb-6">
-                    <label for="category-description" class="block text-gray-700 mb-2">وصف الفئة</label>
-                    <textarea 
-                        id="category-description" 
-                        class="w-full px-3 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-yellow-400" 
-                        placeholder="أدخل وصف الفئة"
-                        rows="4"
-                    ></textarea>
                 </div>
 
                 <!-- Category Image Upload -->
@@ -166,6 +197,101 @@
     </div>
 
     <script>
+
+
+    document.addEventListener("DOMContentLoaded", function () {
+        const userId = localStorage.getItem("userId") || sessionStorage.getItem("userId");
+        const permissions = localStorage.getItem("permissions") || sessionStorage.getItem("permissions");
+        const token = localStorage.getItem("token") || sessionStorage.getItem("token");
+
+        if (!userId || !permissions || !token) {
+            window.location.href = "index.html";
+            return;
+        }
+
+        const PermissionsArray = permissions.split('&');
+        if (!PermissionsArray.includes('gererCategorys')) {
+            if (window.history.length > 1) {
+                window.history.back();
+            } else {
+                window.location.href = "index.html";
+            }
+            return;
+        }
+
+        const form = document.getElementById('new-category-form');
+        const categoryNameInput = document.getElementById('category-name');
+        const categoryImageInput = document.getElementById('category-image');
+
+        form.addEventListener('submit', async function (event) {
+            event.preventDefault();
+
+            const categoryName = categoryNameInput.value.trim();
+            const categoryImageFile = categoryImageInput.files[0];
+
+            if (!categoryName) {
+                alert('الرجاء إدخال اسم الفئة');
+                return;
+            }
+
+            try {
+                let imageUrl = null;
+
+                // Upload image if provided
+                if (categoryImageFile) {
+                    const formData = new FormData();
+                    formData.append('image', categoryImageFile, categoryName + '.jpg');
+                    formData.append('label', categoryName);
+
+                    const uploadResponse = await fetch('https://sbaishop.com/api/category', {
+                        method: 'POST',
+                        headers: {
+                            'Authorization': `Bearer ${token}`,
+                        },
+                        body: formData,
+                    });
+
+                    if (!uploadResponse.ok) {
+                        throw new Error('فشل تحميل الصورة');
+                    }
+
+                    const uploadData = await uploadResponse.json();
+                    imageUrl = uploadData.imageUrl;
+                }
+
+                // Send category data
+                const categoryData = { label: categoryName };
+                if (imageUrl) categoryData.image = imageUrl;
+
+                const response = await fetch('https://sbaishop.com/api/category', {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json',
+                        'Authorization': `Bearer ${token}`,
+                    },
+                    body: JSON.stringify(categoryData),
+                });
+console.log(response.errors);
+                if(response.status == 422 && response.errors.label=="The label has already been taken."){
+                    alert('اسم الفئة مستخدم من قبل');
+                }else if (response.status === 422) {
+                    throw new Error('البيانات غير صالحة، يرجى التحقق من المدخلات');
+                } else if (response.status === 500) {
+                    throw new Error('خطأ داخلي في الخادم، يرجى المحاولة لاحقًا');
+                } else if (!response.ok) {
+                    throw new Error('فشل إضافة الفئة');
+                }
+
+                alert('تمت إضافة الفئة بنجاح');
+                window.location.href = 'Categories.html';
+
+            } catch (error) {
+                console.error('حدث خطأ:', error);
+            }
+        });
+    });
+
+
         // Toggle Profile Dropdown
         const profileBtn = document.getElementById('profile-btn');
         const profileDropdown = document.getElementById('profile-dropdown');
