--- a/Admin/NewClient.html
+++ b/Admin/NewClient.html
@@ -28,7 +28,7 @@
                     }
                 }
                 if (!PermissionsArray.includes('gererProducts')) document.getElementById('products').remove();
-                if (!PermissionsArray.includes('gererCategories')) document.getElementById('categories').remove();
+                if (!PermissionsArray.includes('gererCategorys')) document.getElementById('categories').remove();
                 if (!PermissionsArray.includes('gererOrders')) document.getElementById('orders').remove();
                 // if (!PermissionsArray.includes('gererUsers')) document.getElementById('users').remove();
                 if (!PermissionsArray.includes('gererSettings')) document.getElementById('settings').remove();
@@ -101,7 +101,7 @@
     </div>
 
     <!-- Main Content -->
-    <div class="p-6 md:mr-64 mt-16"> <!-- Add margin-top for navbar -->
+    <div class="p-6 md:mr-64"> <!-- Add margin-top for navbar -->
         <h1 class="text-center text-2xl font-bold text-gray-800 mb-4">
             <i class="fas fa-user-plus text-yellow-400"></i> إضافة عميل
         </h1>
