--- a/Admin/NewProduct.html
+++ b/Admin/NewProduct.html
@@ -75,7 +75,7 @@
     </div>
 
     <!-- Main Content -->
-    <div class="p-6 md:mr-64 mt-16"> <!-- Add margin-top for navbar -->
+    <div class="p-6 md:mr-64"> <!-- Add margin-top for navbar -->
         <h1 class="text-center text-2xl font-bold text-gray-800 mb-4">
             <i class="fas fa-plus text-yellow-400"></i> إضافة منتج
         </h1>
