--- a/Admin/Orders.html
+++ b/Admin/Orders.html
@@ -30,7 +30,7 @@
                 }
                 if (!PermissionsArray.includes('gererProducts')) document.getElementById('products').remove();
                 if (!PermissionsArray.includes('gererClients')) document.getElementById('clients').remove();
-                if (!PermissionsArray.includes('gererCategories')) document.getElementById('categories').remove();
+                if (!PermissionsArray.includes('gererCategorys')) document.getElementById('categories').remove();
                 // if (!PermissionsArray.includes('gererUsers')) document.getElementById('users').remove();
                 if (!PermissionsArray.includes('gererSettings')) document.getElementById('settings').remove();
             }
@@ -110,10 +110,23 @@
         </div>
 
         <!-- Main Content -->
-        <div class="p-6 md:mr-64 mt-16"> <!-- Add margin-top for navbar -->
-            <h1 class="text-center text-2xl font-bold text-gray-800 mb-4">
-                <i class="fas fa-shopping-cart text-yellow-400"></i> الطلبات
-            </h1>
+        <div class="p-6 md:mr-64"> <!-- Add margin-top for navbar -->
+
+            <div class="flex justify-between align-center mb-6">
+                <h1 class="text-center text-2xl font-bold text-gray-800 mb-4">
+                    <i class="fas fa-shopping-cart text-yellow-400"></i> الطلبات
+                </h1>
+                <!-- Add Order Button -->
+                <a href="NewOrder.html">
+                    <button
+                        class="w-full md:w-auto bg-green-500 text-white px-4 py-2 rounded-lg hover:bg-green-600 whitespace-nowrap">
+                        <i class="fas fa-plus"></i> إضافة طلب
+                    </button>
+                </a>
+            </div>
+
+
+            
 
             <!-- Search Bar and Add Order Button -->
             <div
@@ -126,13 +139,7 @@
                         class="w-full px-3 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-yellow-400">
                 </div>
 
-                <!-- Add Order Button -->
-                <a href="NewOrder.html">
-                    <button
-                        class="w-full md:w-auto bg-green-500 text-white px-4 py-2 rounded-lg hover:bg-green-600 whitespace-nowrap">
-                        <i class="fas fa-plus"></i> إضافة طلب
-                    </button>
-                </a>
+                
             </div>
 
             <!-- Orders Table -->
@@ -176,11 +183,11 @@
                             </td>
                             <td class="p-3 border-b text-center">
                                 <button
-                                    class="bg-blue-500 text-white px-2 py-1 rounded-lg hover:bg-blue-600">
+                                    class="bg-blue-500 text-white px-2 py-1 rounded-full hover:bg-blue-600">
                                     <i class="fas fa-edit"></i>
                                 </button>
                                 <button
-                                    class="bg-red-500 text-white px-2 py-1 rounded-lg hover:bg-red-600">
+                                    class="bg-red-500 text-white px-2 py-1 rounded-full hover:bg-red-600">
                                     <i class="fas fa-trash"></i>
                                 </button>
                             </td>
@@ -204,11 +211,11 @@
                             </td>
                             <td class="p-3 border-b text-center">
                                 <button
-                                    class="bg-blue-500 text-white px-2 py-1 rounded-lg hover:bg-blue-600">
+                                    class="bg-blue-500 text-white px-2 py-1 rounded-full hover:bg-blue-600">
                                     <i class="fas fa-edit"></i>
                                 </button>
                                 <button
-                                    class="bg-red-500 text-white px-2 py-1 rounded-lg hover:bg-red-600">
+                                    class="bg-red-500 text-white px-2 py-1 rounded-full hover:bg-red-600">
                                     <i class="fas fa-trash"></i>
                                 </button>
                             </td>
