--- a/Admin/PassReset.html
+++ b/Admin/PassReset.html
@@ -69,7 +69,7 @@
 
                 <!-- Back to Login Link -->
                 <p class="mt-4 text-gray-600">
-                    <a href="Login.html"
+                    <a href="index.html"
                         class="text-yellow-500 hover:underline">
                         <i class="fas fa-arrow-left"></i> العودة لتسجيل الدخول
                     </a>
